Fixed Compilation Issues